[tool.poetry]
name = "flask-forms"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-DB = "^0.3.0"
Flask-GFM = "^0.1.1"
Flask-Sessions = "^0.1.5"
Flask-Styleguide = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
